--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zt-mobile/react-native-view-shot",
-  "version": "3.1.5",
+  "name": "react-native-view-shot",
+  "version": "3.1.6",
   "description": "Capture a React Native view to an image",
   "main": "src/index.js",
   "types": "src/index.d.ts",
